--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,23 +2,20 @@ name: test
 on: [push]
 jobs:
   test:
-    strategy:
-      matrix:
-        go-version: [1.18, 1.19]
     name: test
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+        uses: actions/checkout@v3
+      - name: setup go
+        uses: actions/setup-go@v3
         with:
-          go-version: ${{ matrix.go-version }}
-      - name: test (race detector)
-        run: go test -timeout=30s -race -count=10 -failfast ./...
-      - name: test (verbose)
-        run: go test -v ./... -coverprofile=./cover.out -covermode=atomic
-      - name: upload code coverage
-        uses: codecov/codecov-action@v3.1.0
-        if: contains(github.ref, 'main')
+          go-version-file: go.mod
+      - name: test
+        run: go test -timeout=3s -race -count=10 -shuffle=on -failfast ./...
+      - name: generate coverage
+        run: go test ./... -coverprofile=./cover.out -covermode=atomic
+      - name: check test coverage
+        uses: vladopajic/go-test-coverage@v1
         with:
-          file: ./cover.out
+          config: ./.testcoverage.yml
