--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
           config: ./.testcoverage.yml
       - name: make coverage badge
         uses: action-badges/core@0.2.2
+        if: contains(github.ref, 'main')
         with:
           label: coverage
           message: ${{ steps.coverage.outputs.total_coverage }}%
