--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,17 @@ jobs:
       - name: generate coverage
         run: go test ./... -coverprofile=./cover.out -covermode=atomic
       - name: check test coverage
+        id: coverage
         uses: vladopajic/go-test-coverage@v1
         with:
           config: ./.testcoverage.yml
+      - name: make coverage badge
+        uses: action-badges/core@0.2.2
+        if: contains(github.ref, 'main')
+        with:
+          label: coverage
+          message: ${{ steps.coverage.outputs.total_coverage }}%
+          message-color: blue
+          file-name: coverage.svg
+          badge-branch: badges
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
